[package]
name = "rocket-route-result"
version = "0.1.0"
authors = ["Lucas Antunes <lucasba8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
serde = { version = "1.0" }
serde_json = "1.0.57"
okapi = { version = "0.4", features = ["derive_json_schema"], optional = true }
rocket_okapi = { version = "0.5", optional = true }
schemars = { version = "0.7", default-features = false, optional = true }

[features]
okapi-0_4 = ["okapi", "rocket_okapi", "schemars"]
